kong-0.1.1/work/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin-api
  namespace: kong
  annotations:
    konghq.com/plugins: admin-api-auth
spec:
  ingressClassName: kong
  rules:
  - host: kong.spaasta.com
    http:
      paths:
      - backend:
          service:
            name: kong-kong-admin
            port:
              number: 8001
        path: /
        pathType: ImplementationSpecific
